--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
   <script src="//unpkg.com/prismjs@1.13.0/components/prism-python.min.js"></script>
   <script src="./assets/code.js"></script>
 
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?525192c4bfa191e999032dadc23e4776";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+
+
+
 
 </body>
 </html>
